...
import home from "../assets/home.png";
import building from "../assets/building.png";
import user from "../assets/user.png";
import { Home } from "./screens/Home";
import { NotFound } from "./screens/NotFound";
import { WebView } from "./screens/WebView";
import { Profile } from "./screens/Profile";
import { useIsSignedIn, useIsSignedOut } from "../auth/AuthContext";
import { Login } from "./screens/Login";
import { BankIDAuth } from "./screens/BankIDAuth";
import { Registration } from "./screens/Registration";

export type HomeTabParamList = {
...
