appId: com.simoncnielsen.expoe2eexample.e2e
---
#Log in and open the webview

- launchApp

- runFlow:
    file: helpers/reset-e2e.yml

- runFlow:
    file: helpers/login-mock.yml

- tapOn: "WebView"

- assertVisible: "https://partnere2e.example.com/default-link"

- tapOn: "Home"

- tapOn: "Open first link"

- assertVisible: "https://partnere2e.example.com/first-link"

- tapOn: "Home"

- tapOn: "Open second link"

- assertVisible: "https://partnere2e.example.com/second-link"
